--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.env
+venv/*
 .env.gcp.yaml
 postgres-volume/
 redis-volume/
@@ -59,3 +60,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+run_local.sh
