--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,11 +19,12 @@ langserve = "0.0.32"
 orjson = "^3.9.10"
 python-multipart = "^0.0.6"
 tiktoken = "^0.5.1"
-gigachain = ">=0.0.338"
+gigachain = ">=0.1.14"
+gigachain_community = "^0.0.33.1"
 langgraph = "^0.0.31"
 pydantic = "<2.0"
 python-magic = "^0.4.27"
-gigachain-openai = "^0.1.1"
+gigachain-openai = ">=0.1.1"
 beautifulsoup4 = "^4.12.3"
 boto3 = "^1.34.28"
 duckduckgo-search = "^5.3.0"
@@ -42,7 +43,7 @@ unstructured = {extras = ["doc", "docx"], version = "^0.12.5"}
 pgvector = "^0.2.5"
 psycopg2-binary = "^2.9.9"
 asyncpg = "^0.29.0"
-gigachain-core = "^0.1.39"
+gigachain-core = ">=0.1.43.1"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 
 [tool.poetry.group.dev.dependencies]
